Java 8->11 code format changes