@@ -102,7 +102,7 @@ public class RunElementDelayJSData extends RunElementData {
 		}
 
 		/* Kosten pro Bedienung */
-		if (costs==null || costs.trim().isEmpty()) {
+		if (costs==null || costs.isBlank()) {
 			this.costs=null;
 		} else {
 			this.costs=new ExpressionCalc(variableNames,simData.runModel.modelUserFunctions);
