@@ -436,7 +436,7 @@ public class ModelElementDuplicate extends ModelElementBox implements ModelDataR
 			node.appendChild(sub=doc.createElement(Language.trPrimary("Surface.XML.Connection")));
 			sub.setAttribute(Language.trPrimary("Surface.XML.Connection.Element"),""+element.getId());
 			sub.setAttribute(Language.trPrimary("Surface.XML.Connection.Type"),Language.trPrimary("Surface.XML.Connection.Type.Out"));
-			if (newClientTypes!=null && newClientTypes.size()>i && !newClientTypes.get(i).trim().isEmpty()) sub.setAttribute(Language.trPrimary("Surface.XML.Connection.NewClientType"),newClientTypes.get(i).trim());
+			if (newClientTypes!=null && newClientTypes.size()>i && !newClientTypes.get(i).isBlank()) sub.setAttribute(Language.trPrimary("Surface.XML.Connection.NewClientType"),newClientTypes.get(i).trim());
 		}
 	}
 
@@ -465,7 +465,7 @@ public class ModelElementDuplicate extends ModelElementBox implements ModelDataR
 				if (connectionsOutIds==null) connectionsOutIds=new ArrayList<>();
 				connectionsOutIds.add(I);
 				final String newClientType=Language.trAllAttribute("Surface.XML.Connection.NewClientType",node);
-				if (!newClientType.trim().isEmpty()) {
+				if (!newClientType.isBlank()) {
 					if (newClientTypes==null) newClientTypes=new ArrayList<>();
 					while (newClientTypes.size()<connectionsOutIds.size()-1) newClientTypes.add("");
 					newClientTypes.add(newClientType);
