@@ -486,7 +486,7 @@ public class ModelElementInteractiveRadiobutton extends ModelElementPosition imp
 
 	@Override
 	public String[] getVariables() {
-		if (variable==null || variable.trim().isEmpty()) return new String[0]; else return new String[]{variable.trim()};
+		if (variable==null || variable.isBlank()) return new String[0]; else return new String[]{variable.trim()};
 	}
 
 	/**
