@@ -249,7 +249,7 @@ public class OutputDBTableModel extends JTableExtAbstractTableModel {
 		final String sel=column.get(rowIndex);
 		final List<String> cols=new ArrayList<>(dbColumnNames);
 		int index=-1;
-		if (sel.trim().isEmpty()) {
+		if (sel.isBlank()) {
 			if (cols.size()>0) {
 				index=0;
 				column.set(rowIndex,cols.get(0));
@@ -443,7 +443,7 @@ public class OutputDBTableModel extends JTableExtAbstractTableModel {
 					while (true) {
 						s=JOptionPane.showInputDialog(table,Language.tr("Surface.OutputDB.Table.EditExpression"),s);
 						if (s==null) break;
-						if (s.trim().isEmpty()) {data.set(row,""); break;}
+						if (s.isBlank()) {data.set(row,""); break;}
 						int error=ExpressionCalc.check(s,variableNames,userFunctions);
 						if (error<0) {data.set(row,s); break;}
 						MsgBox.error(table,Language.tr("Surface.OutputDB.Table.ExpressionError.Title"),String.format(Language.tr("Surface.OutputDB.Table.ExpressionError.Info"),s,error+1));
